# clocksw

./: .gitignore  Cargo.toml  Makefile  README.md  clocksw
.cargo/: config.toml
data/: Makefile  gen_rawfont.py  requirements.txt
data/fonts/: ArialMT-24.bdf  TinyPixel-5.bdf
scripts/: compile_librgbmatrix.sh
src/: app.rs  display.rs  drivers.rs  lib.rs  main.rs  utils.rs
src/fonts/: arial.rs  mod.rs  tinypixel.rs
src/helpers/: mod.rs  time.rs
src/views/: day_clock.rs  mod.rs  night_clock.rs  view.rs
src/views/components/: large_digital_clock.rs  mod.rs
